offcenter logo fix

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body {
   position: fixed;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%) ;
+  transform: translate(-46%, -50%) ;
 }
 
 @keyframes marqueeFw {
